grammar.js
    source_file: ($) => repeat(

      source_file: ($) => repeat(
        choice(
          $.include_statement,
          $.filetype_declaration,
          $.stage_definition,
          $.pipeline_definition,
          $.struct_definition,
          $.call_statement,
          $._val_exp,
        ),
      ),

      // -----------------------------------------------------------------------
      // ==== Includes =========================================================
      // -----------------------------------------------------------------------
      // An include is something of the form:
      //      @include 'path/to/file.mro'

      include_statement: ($) => seq(keywords.include, field('file', $.string)),

      // -----------------------------------------------------------------------
      // ==== Structs ==========================================================
      // -----------------------------------------------------------------------
      // A 'struct' is something of the form:
      //      struct Point(
      //          float x,
      //          int[] y,
      //          int    d2   'foo',
      //          json  dest  'help' 'dest.xml',
      //      )

      pipeline_definition: ($) => seq(
        keywords.pipeline,
        field('name', $.identifier),
        '(',
        field('params', $.parameter_list),
        ')',
        '{',
        field('calls', alias(repeat($.call_statement), $.call_statement_list)),
        $.return_statement,
        optional($.retain_statement),
        '}',
      ),

      return_statement: ($) => seq(keywords.return, '(', optional($.binding_list), ')'),

      // -----------------------------------------------------------------------
      // ==== Stage ============================================================
      // -----------------------------------------------------------------------
      // A 'stage' is something of the form:
      //      stage STAGE_NAME(
      //          # Input parameters
      //          in string                    key,
      //          in int[]                     y,
      //          in  json                     start,
      //          in  string                   fail_file  "The file to \"check\' to force failure.',
      //          in  map<Point>               point,
      //          # Output parameters
      //          out json                     result    ''  'out name',
      //          out Point[]                  arr,
      //          out map<STRUCT_CONSUMER>     flat_map,
      //          # The source file.
      //          src py                       'stages/add_key',
      //          # or src exec     'stages/whatever arg',
      //          # or src comp    'bin/sum_squares mode_arg',
      //      ) split (
      //          in  float   value,
      //          out float   square,
      //      ) using (
      //          # This stage does almost nothing.
      //          mem_gb  = 0.05,
      //          # Perhaps it sleeps a while.
      //          threads = 0.01,
      //          # This stage uses 2TB of vmem.
      //          vmem_gb  = 1024,
      //          volatile = strict,
      //      )

      using_statement: ($) => seq(
        'using',
        '(',
        optional(field('resources', $.resource_list)),
        ')',
      ),

      resource_list: ($) => sepBy1(',', $.resource),

      resource: ($) => seq(
        field('target', $.resource_type),
        '=',
        field('value', $.resource_value),
      ),

      resource_type: (_) => choice(
        keywords.mem_gb,
        keywords.vmem_gb,
        keywords.threads,
        keywords.volatile,
        keywords.local,
        keywords.disabled,
        keywords.preflight,
        keywords.special,
      ),

      resource_value: ($) => choice(
        $.reference_expression, $._constant,
      ),


      // Retain list is a statement of the form
      //  retain (
      //    x = y,
      //  )
      retain_statement: ($) => seq(
        keywords.retain,
        '(',
        repeat(field('name', seq($.reference_expression, ','))),
        ')',
      ),


      // -----------------------------------------------------------------------
      // ==== Stage and Pipeline Parameter Lists ===============================
      // -----------------------------------------------------------------------

      parameter_list: ($) => repeat1(
        seq(
          choice(
            $.input_parameter,
            $.output_parameter,
          ),
          ',',
        ),
      ),

      input_parameter: ($) => seq(
        keywords.in,
        choice(
          $._typed_parameter,
          $._typed_parameter_help,
        ),
      ),

      output_parameter: ($) => seq(
        keywords.out,
        choice(
          $._typed_default_parameter,
          $._typed_parameter,
          $._typed_parameter_help,
          $._typed_parameter_help_rename,
        ),
      ),

      _typed_default_parameter: ($) => seq(
        field('type', $.parameter_type),
      ),

      _typed_parameter: ($) => seq(
        field('type', $.parameter_type),
        field('name', $.identifier),
      ),

      _typed_parameter_help: ($) => seq(
        field('type', $.parameter_type),
        field('name', $.identifier),
        field('help', $.string),
      ),

      _typed_parameter_help_rename: ($) => seq(
        field('type', $.parameter_type),
        field('name', $.identifier),
        field('help', $.string),
        field('output_name', $.string),
      ),

      parameter_type: ($) => choice(
        $.primitive_type,
        // map<int>, map<int[]>
        $.map_type,
        // int[], Point[], map<string>[], map<int[]>[], json[]
        $.array_type,
        // json, Point, ...
        $.identifier,
        // ome.tif
        $.scoped_identifier,
      ),

      primitive_type: (_) => choice(
        keywords.string,
        keywords.int,
        keywords.float,
        keywords.bool,
        keywords.path,
        keywords.file,
      ),

      array_type: ($) => seq(
        $.parameter_type,
        // int[], int[][],
        seq('[', ']'),
      ),

      // -----------------------------------------------------------------------
      // ==== Call or Map Call =================================================
      // -----------------------------------------------------------------------
      // A 'stage' is something of the form:
      //      call MAP_PRODUCER(
      //          * = self,
      //      )
      //
      //      call ADD_KEY1(
      //          key      = self.key1,
      //          value    = self.value1,
      //          input = [
      //              'four',
      //              ADD_KEY3.result,
      //          ],
      //          foo1               = {
      //              'item': STRUCT_CONSUMER,
      //          },
      //          # Comments can go on arguments as well.
      //          failfile = "fail \n\"1\'',
      //          start    = null,
      //      ) using (
      //          local = true,
      //      )
      //
      //      call MAP_EXAMPLE(
      //          foo = {
      //              'bar': 'baz',
      //              # Comments inside a map expression.
      //              'bing': null,
      //              'blarg': {
      //                  # Deeper inside comments.
      //                  'n': 2,
      //              },
      //          },
      //      ) using (
      //          # ADD_KEY3 can disable this stage.
      //          disabled = ADD_KEY3.disable_example,
      //          local    = true,
      //          # This shouldn't be volatile because reasons.
      //          volatile = false,
      //      )
      //
      //      # Calls the pipelines, splitting over two forks.
      //      map call AWESOME(
      //          key1      = '1',
      //          value1    = 'one',
      //          key2      = '2',
      //          value2    = split [
      //              'two',
      //              'deux',
      //          ],
      //          struct_in = {
      //              dest: 'foo.json',
      //              point: {
      //                  x: 1.5,
      //                  y: [
      //                      2,
      //                      3,
      //                  ],
      //              },
      //          },
      //      )

      call_statement: ($) => seq(
        optional(keywords.map),
        keywords.call,
        optional($.modifiers),
        field('name', $.identifier),
        optional(alias($._call_alias, $.alias)),
        '(',
        optional(field('params', $.binding_list)),
        ')',
        optional($.using_statement),
      ),

      _call_alias: ($) => seq(
        keywords.as,
        field('alias', $.identifier),
      ),

      binding_list: ($) => seq(
        $.binding,
        repeat(seq(',', $.binding)),
        optional(','),
      ),

      binding: ($) => seq(
        field('target', $.binding_target),
        '=',
        optional(keywords.split),
        field('value', $.expression),
      ),

      expression: ($) => choice(
        $.reference_expression,
        $._val_exp,
      ),

      _val_exp: $ => choice(
        $.array_expression,
        $.map_expression,
        $._constant,
      ),

      binding_target: ($) => choice(
        '*',
        $.identifier,
      ),

      array_expression: ($) => seq(
        '[',
        sepBy(',', $.expression),
        ']',
      ),

      // ---------------------
      // ==== Map Binding ====
      // ---------------------

      // Technically, we can only have:
      //    seq('{', $.string, ':' $.exp, '}')
      // or
      //    seq('{', $.identifier, ':' $.exp, '}')
      // This rule is more relaxed.
      map_expression: ($) => seq(
        '{',
        sepBy(',', $.pair),
        '}',
      ),

      // A `pair` is a statement of the form:
      //  key: value
      pair: ($) => seq(
        field('key', choice($.string, $.identifier)),
        ':',
        field('value', $.expression),
      ),

      // -----------------------------------------------------------------------
      // ==== File Type Declaration ============================================
      // -----------------------------------------------------------------------
      // The file type declaration is something of the form:
      //      filetype json;

      reference_expression: $ => choice(
        $.identifier,
        keywords.self,
        $.reference_list,
      ),

      reference_list: $ => choice(
        $.scoped_identifier,
        seq(field('value', $.identifier), '.', field('field', keywords.default)),
        seq(field('value', keywords.self), '.', field('field', $.identifier)),
        seq(field('value', keywords.self), '.', field('field', $.scoped_identifier)),
      ),

      scoped_identifier: ($) => seq(
        field('value', $.identifier),
        field('field', repeat1(seq('.', $.identifier))),
      ),

      // -----------------------------------------------------------------------
      // ==== Constants ========================================================
      // -----------------------------------------------------------------------

      _constant: ($) => choice(
        $.string,
        $._number,
        $.true,
        $.false,
        $.null,
      ),

      string: ($) => seq('"', $._string_inner, '"'),

      _string_inner: (_) => /((?:[^\\\"]|\\.)*)/,

      // _string_inner: ($) => choice(
      //   $._string_inner_constant_character_escape_mro,
      //   $._string_inner_invalid_illegal_unknown_escape_mro,
      //   $._string_inner_quoted_double_character_mro,
      // ),

      comment: (_) => token(seq('#', /.*/)),

      // -----------------------------------------------------------------------
      // ==== Identifier =======================================================
      // -----------------------------------------------------------------------

      identifier: (_) => ID,


  },
});

/**
 * Create a rule that matches a rule seperated by a token.
 * @param {*} sep The seperation token.
 * @param {*} rule The rule.
 * @return {*} The rule.
 */
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)), optional(sep));
}

/**
 * Same as `sepBy1` except the rule is optional.
 * @param {*} sep The seperation token.
 * @param {*} rule The rule.
 * @return {*} The rule.
 */
function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}
