test/corpus/invoke.txt
================================================================================
Pipeline Invoker
================================================================================

@include "pipeline.mro"

call DUPLICATE_FINDER(
    unsorted = "/home/duplicator_dave/unsorted.txt",
)

--------------------------------------------------------------------------------

(source_file
  (include_statement
    (string))
  (call_statement
    (identifier)
    (binding_list
      (binding
        (binding_target
          (identifier))
        (expression
          (string))))))
